--- a/public/css/root.css
+++ b/public/css/root.css
@@ -1,6 +1,7 @@
 :root {
+  --nav-width: 250px;
   --nav-height: 60px;
-  --base-font: 22px;
+  --base-font-size: 20px;
 
   --width-container: 1200px;
 
@@ -11,6 +12,7 @@
   --color-white: rgb(254, 254, 254);
   --color-violet: rgb(73, 57, 113);
   --color-yellow: #ffde7d;
+  --color-yellow-light: #f1f191;
   --color-violet-light: #f9f9ff;
   --color-violet-light2: rgba(185, 159, 237, 0.6);
   --color-grey: #d1d3d4;
@@ -19,6 +21,7 @@
 [data-theme="light"] {
   --color-primary: var(--color-violet);
   --color-secondary: var(--color-yellow);
+  --color-secondary-light: var(--color-yellow-light);
   --color-primary-light: var(--color-violet-light);
   --color-primary-light2: var(--color-violet-light2);
   --color-text: var(--color-black);
