--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,13 +33,22 @@ body {
   background-color: var(--color-bg);
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .container {
   position: relative;
   width: 95%;
   max-width: var(--width-container);
   margin: 1em auto;
   background-color: var(--color-primary-light);
-  padding: 1rem 5rem;
+  padding: 5rem;
+  padding-top: 3rem;
   border-radius: 2rem;
 }
 
