--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,10 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
+#content {
+  margin-left: var(--nav-width);
+  width: calc(100% - var(--nav-width));
+}
 .container {
   position: relative;
   width: 95%;
@@ -50,6 +53,13 @@ a:hover {
   padding: 5rem;
   padding-top: 3rem;
   border-radius: 2rem;
+}
+
+.container-lg.container {
+  width: calc(100% - 20px);
+  max-width: calc(100% - 20px);
+  margin-left: 20px;
+  border-radius: 2rem 0 0 2rem;
 }
 
 .max-height {
@@ -89,7 +99,7 @@ h5 {
 
 main {
   display: grid;
-  grid-template-columns: var(--nav-width) calc(100% - var(--nav-width));
+  /* grid-template-columns: var(--nav-width) calc(100% - var(--nav-width)); */
   min-height: 100vh;
   width: 100%;
   background: rgb(254, 254, 254);
