--- a/public/mincss/ui/image/style.css
+++ b/public/mincss/ui/image/style.css
@@ -1,1 +1,1 @@
-.picture{display:block;width:100%}.picture-image{border-radius:15px;width:100%}
+.picture{display:block;width:100%}.picture-image{border-radius:15px;width:100%;height:100%;object-fit:cover}
