--- a/public/mincss/components/breadcrumbs/style.css
+++ b/public/mincss/components/breadcrumbs/style.css
@@ -1,1 +1,1 @@
-.breadcrumbs-item{display:inline-block}.breadcrumbs-item a{color:var(--color-primary)}
+.breadcrumbs-item{display:inline-block}.breadcrumbs-item a{color:var(--color-primary)}.breadcrumbs-item a h1{font-weight:500;font-size:inherit}
