edit logic controller and page. edit structure

--- a/App/Templates/ui/title_description/style.css
+++ b/App/Templates/ui/title_description/style.css
@@ -1,3 +1,9 @@
 .title_description {
   color: var(--color-grey-dark);
 }
+.title_description h1 {
+  color: var(--color-grey-dark);
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 500;
+}
