--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,20 @@ body {
   font-weight: 400;
   color: var(--color-text);
   background-color: var(--color-bg);
+  letter-spacing: 0.02em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  animation: body-animation 0.9s;
+  -webkit-font-smoothing: antialiased;
+}
+
+@keyframes body-animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 a {
@@ -49,17 +63,12 @@ a:hover {
   width: 95%;
   max-width: var(--width-container);
   margin: 1em auto;
-  background-color: var(--color-primary-light);
-  padding: 5rem;
-  padding-top: 3rem;
-  border-radius: 2rem;
 }
 
 .container-lg.container {
   width: calc(100% - 20px);
   max-width: calc(100% - 20px);
   margin-left: 20px;
-  border-radius: 2rem 0 0 2rem;
 }
 
 .max-height {
