--- a/public/mincss/ui/title_description/style.css
+++ b/public/mincss/ui/title_description/style.css
@@ -1,1 +1,1 @@
-.title_description{color:var(--color-grey-dark)}
+.title_description,.title_description h1{color:var(--color-grey-dark)}.title_description h1{display:inline-block;font-size:1em;font-weight:500}
