--- a/App/Templates/components/music/style.css
+++ b/App/Templates/components/music/style.css
@@ -96,15 +96,14 @@
   color: #fff;
 }
 .music-body-item {
-  display: grid;
-  grid-template-columns: 30% 60% 10%;
+  display: flex;
   align-items: center;
-  gap: 10px;
   margin-bottom: 20px;
 }
-.music-body-item-img {
-  max-width: 100px;
-  margin: 0.5em 0;
+.music-body-item .picture {
+  height: 80px;
+  width: 80px;
+  margin-right: 1rem;
 }
 .music-body-item-title h4 {
   font-size: 1.2em;
