--- a/public/mincss/components/editor/style.css
+++ b/public/mincss/components/editor/style.css
@@ -1,122 +1,1 @@
-._inputPlus_18w8b_1 {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 45px;
-}
-._inputPlusValue_18w8b_6 {
-  border: 1px solid #b1b1b1;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  padding: 9px 10px;
-  font: 1rem/1em Roboto, sans-serif;
-  min-height: 32px;
-  border-left: right;
-}
-._inputPlusValue_18w8b_6::placeholder {
-  color: #7b7b7b;
-}
-._inputPlusButton_18w8b_18 {
-  min-height: 32px;
-  border-radius: 0 5px 5px 0;
-  border: none;
-  background: url(/assets/plus.d7a3729d.svg) center center no-repeat #3f72af;
-  width: 60px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-._inputPlusButton_18w8b_18:hover {
-  background-color: #0b4283;
-}
-._inputTask_13vi2_1 {
-  background: #dbe2ef;
-  border-radius: 5px;
-  margin-bottom: 15px;
-  display: grid;
-  grid-template-columns: 1fr auto auto;
-  align-items: center;
-  padding-right: 15px;
-}
-._inputTask_13vi2_1:last-child {
-  margin-bottom: 0;
-}
-._inputTaskCheckbox_13vi2_13 {
-  border: 1px solid #3f72af;
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-}
-._inputTaskLabel_13vi2_20 {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-  cursor: pointer;
-  padding: 12px 15px;
-}
-._inputTaskTitle_13vi2_27 {
-  padding: 5px;
-  line-height: 1.2;
-}
-._inputTaskTitleEdit_13vi2_31 {
-  font: 1rem/1em Roboto, sans-serif;
-  border: none;
-  padding: 5px;
-  background: 0 0;
-  box-shadow: 0 4px 0 -3px #3f72af;
-}
-._inputTaskEdit_13vi2_38,
-._inputTaskRemove_13vi2_38,
-._inputTaskSave_13vi2_38 {
-  display: block;
-  height: 100%;
-  width: 50px;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  transition: opacity 0.3s;
-}
-._inputTaskEdit_13vi2_38:hover,
-._inputTaskRemove_13vi2_38:hover,
-._inputTaskSave_13vi2_38:hover {
-  opacity: 0.7;
-}
-._inputTaskEdit_13vi2_38 {
-  background: url(/assets/edit.cd2e3131.svg) center center no-repeat;
-}
-._inputTaskSave_13vi2_38 {
-  background: url(/assets/check.7382efa7.svg) center center no-repeat;
-}
-._inputTaskRemove_13vi2_38 {
-  background: url(/assets/trash.19c5f018.svg) center center no-repeat;
-}
-._article_o25nn_1 {
-  background: #fff;
-  min-width: 600px;
-  border-radius: 20px;
-  padding: 25px 50px 40px;
-}
-._articleTitle_o25nn_7 {
-  font-size: 40px;
-  font-weight: 400;
-  text-align: center;
-  margin-bottom: 0.3em;
-}
-._articleSection_o25nn_13 {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-._articleSection_o25nn_13:last-child {
-  padding-bottom: 0;
-}
-._articleText_o25nn_20 {
-  text-align: center;
-}
-#editor {
-  font: 16px/1.4 Roboto, sans-serif;
-  min-height: 100vh;
-  padding: 1rem;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+._iconSvg_12ju3_17,._icon_12ju3_1{display:block;height:100%;width:50px}._html_d3rwv_1{cursor:pointer;position:relative;line-height:1.2;margin:0;padding:1em}._html_d3rwv_1:before{position:absolute;left:16px;content:attr(placeholder);color:var(--editor-placeholder)}._icon_12ju3_1{border:none;padding:0;cursor:pointer;transition:opacity .3s;background-color:transparent}._iconActive_12ju3_11{background-color:var(--editor-border)}._icon_12ju3_1:hover{opacity:.5}._iconSvg_12ju3_17[data-icon=plus]{background:url(/assets/plus.3c4d5495.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=image]{background:url(/assets/image.bf36af19.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=table]{background:url(/assets/table.e5d74e7c.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=trash]{background:url(/assets/trash.eb80c84e.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=card]{background:url(/assets/card.28381f71.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=cancel]{background:url(/assets/cancel.74f6fdf1.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=h1]{background:url(/assets/h1.684a0069.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=h2]{background:url(/assets/h2.9f77cf1e.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=h3]{background:url(/assets/h3.2ea24816.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon="t"]{background:url(/assets/t.88b6d543.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=list]{background:url(/assets/list.546239ed.svg) center center no-repeat}._iconSvg_12ju3_17[data-icon=code]{background:url(/assets/code.73eece7b.svg) center center no-repeat}._menuAdd_ip1jm_1{position:absolute;height:40px;z-index:1;display:flex;left:58px;background-color:#fff;border:var(--editor-border) solid;border-radius:4px}._menuAdd_ip1jm_1 button:hover{background-color:var(--editor-border);opacity:1}._block_lidqv_1{position:relative;border-radius:5px;margin-bottom:15px;display:grid;grid-template-columns:auto 1fr auto;align-items:center;padding-right:15px}._block_lidqv_1:last-child{margin-bottom:0}._blockCheckbox_lidqv_13{border:1px solid var(--editor-primary);border-radius:2px;width:20px;height:20px;margin-right:10px}._article_rur1p_1{background:#fff;width:100%;border-radius:20px;padding:25px 50px 40px}._articleTitle_rur1p_7{font-size:40px;font-weight:400;text-align:center;margin-bottom:.3em}._articleSection_rur1p_13{padding-top:15px;padding-bottom:15px}._articleSection_rur1p_13:last-child{padding-bottom:0}._articleText_rur1p_20{text-align:center}#editor{--editor-primary:#3f72af;--editor-border:rgba(199, 201, 204, 0.48);--editor-placeholder:#666a6d;font:16px/1.4 Roboto,sans-serif;min-height:100vh;padding:1rem;box-sizing:border-box;display:flex;align-items:center;justify-content:center}
