--- a/App/Templates/components/editor/style.css
+++ b/App/Templates/components/editor/style.css
@@ -1,74 +1,17 @@
-._inputPlus_18w8b_1 {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 45px;
-}
-._inputPlusValue_18w8b_6 {
-  border: 1px solid #b1b1b1;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  padding: 9px 10px;
-  font: 1rem/1em Roboto, sans-serif;
-  min-height: 32px;
-  border-left: right;
-}
-._inputPlusValue_18w8b_6::placeholder {
-  color: #7b7b7b;
-}
-._inputPlusButton_18w8b_18 {
-  min-height: 32px;
-  border-radius: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border: none;
-  background: #3f72af url(/assets/plus.d7a3729d.svg) no-repeat center center;
-  width: 60px;
+._html_d3rwv_1 {
   cursor: pointer;
-  transition: background-color 0.3s;
-}
-._inputPlusButton_18w8b_18:hover {
-  background-color: #0b4283;
-}
-._inputTask_13vi2_1 {
-  background: #dbe2ef;
-  border-radius: 5px;
-  margin-bottom: 15px;
-  display: grid;
-  grid-template-columns: 1fr auto auto;
-  align-items: center;
-  padding-right: 15px;
-}
-._inputTask_13vi2_1:last-child {
-  margin-bottom: 0;
-}
-._inputTaskCheckbox_13vi2_13 {
-  border: 1px solid #3f72af;
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-}
-._inputTaskLabel_13vi2_20 {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-  cursor: pointer;
-  padding: 12px 15px;
-}
-._inputTaskTitle_13vi2_27 {
-  padding: 5px;
+  position: relative;
   line-height: 1.2;
+  margin: 0;
+  padding: 1em;
 }
-._inputTaskTitleEdit_13vi2_31 {
-  font: 1rem/1em Roboto, sans-serif;
-  border: none;
-  padding: 5px;
-  background: none;
-  box-shadow: 0 4px 0 -3px #3f72af;
+._html_d3rwv_1:before {
+  position: absolute;
+  left: 16px;
+  content: attr(placeholder);
+  color: var(--editor-placeholder);
 }
-._inputTaskEdit_13vi2_38,
-._inputTaskRemove_13vi2_38,
-._inputTaskSave_13vi2_38 {
+._icon_12ju3_1 {
   display: block;
   height: 100%;
   width: 50px;
@@ -76,44 +19,114 @@
   padding: 0;
   cursor: pointer;
   transition: opacity 0.3s;
+  background-color: transparent;
 }
-._inputTaskEdit_13vi2_38:hover,
-._inputTaskRemove_13vi2_38:hover,
-._inputTaskSave_13vi2_38:hover {
-  opacity: 0.7;
+._iconActive_12ju3_11 {
+  background-color: var(--editor-border);
 }
-._inputTaskEdit_13vi2_38 {
-  background: url(/assets/edit.cd2e3131.svg) no-repeat center center;
+._icon_12ju3_1:hover {
+  opacity: 0.5;
 }
-._inputTaskSave_13vi2_38 {
-  background: url(/assets/check.7382efa7.svg) no-repeat center center;
+._iconSvg_12ju3_17 {
+  display: block;
+  height: 100%;
+  width: 50px;
 }
-._inputTaskRemove_13vi2_38 {
-  background: url(/assets/trash.19c5f018.svg) no-repeat center center;
+._iconSvg_12ju3_17[data-icon="plus"] {
+  background: url(/assets/plus.3c4d5495.svg) no-repeat center center;
 }
-._article_o25nn_1 {
+._iconSvg_12ju3_17[data-icon="image"] {
+  background: url(/assets/image.bf36af19.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="table"] {
+  background: url(/assets/table.e5d74e7c.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="trash"] {
+  background: url(/assets/trash.eb80c84e.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="card"] {
+  background: url(/assets/card.28381f71.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="cancel"] {
+  background: url(/assets/cancel.74f6fdf1.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="h1"] {
+  background: url(/assets/h1.684a0069.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="h2"] {
+  background: url(/assets/h2.9f77cf1e.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="h3"] {
+  background: url(/assets/h3.2ea24816.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="t"] {
+  background: url(/assets/t.88b6d543.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="list"] {
+  background: url(/assets/list.546239ed.svg) no-repeat center center;
+}
+._iconSvg_12ju3_17[data-icon="code"] {
+  background: url(/assets/code.73eece7b.svg) no-repeat center center;
+}
+._menuAdd_ip1jm_1 {
+  position: absolute;
+  height: 40px;
+  z-index: 1;
+  display: flex;
+  left: 58px;
+  background-color: #fff;
+  border: var(--editor-border) solid 1px;
+  border-radius: 4px;
+}
+._menuAdd_ip1jm_1 button:hover {
+  background-color: var(--editor-border);
+  opacity: 1;
+}
+._block_lidqv_1 {
+  position: relative;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  padding-right: 15px;
+}
+._block_lidqv_1:last-child {
+  margin-bottom: 0;
+}
+._blockCheckbox_lidqv_13 {
+  border: 1px solid var(--editor-primary);
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+._article_rur1p_1 {
   background: white;
-  min-width: 600px;
+  width: 100%;
   border-radius: 20px;
   padding: 25px 50px 40px;
 }
-._articleTitle_o25nn_7 {
+._articleTitle_rur1p_7 {
   font-size: 40px;
   font-weight: 400;
   text-align: center;
   margin-bottom: 0.3em;
 }
-._articleSection_o25nn_13 {
+._articleSection_rur1p_13 {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-._articleSection_o25nn_13:last-child {
+._articleSection_rur1p_13:last-child {
   padding-bottom: 0;
 }
-._articleText_o25nn_20 {
+._articleText_rur1p_20 {
   text-align: center;
 }
 #editor {
+  --editor-primary: #3f72af;
+  --editor-border: rgba(199, 201, 204, 0.48);
+  --editor-placeholder: #666a6d;
   font: 16px/1.4 Roboto, sans-serif;
   min-height: 100vh;
   padding: 1rem;
