--- a/App/Templates/components/profile_card/style.css
+++ b/App/Templates/components/profile_card/style.css
@@ -72,7 +72,16 @@
 
 .biocard .text {
   font-size: 0.9rem;
-  margin-bottom: 1rem;
+  margin: 2rem;
+  list-style: initial;
+}
+
+.biocard .text li {
+  margin-bottom: 0.5rem;
+}
+
+.biocard .text li span {
+  font-weight: 700;
 }
 
 .biocard .stats {
@@ -86,25 +95,4 @@
 }
 .biocard .stats li h4 {
   font-size: 0.75rem;
-}
-
-.biocard .links button {
-  font-family: "Poppins", sans-serif;
-  min-width: 100px;
-  padding: 0.5rem;
-  border: 1px solid #222;
-  border-radius: 5px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.25s linear;
-}
-.biocard .links .follow,
-.biocard .links .view:hover {
-  background-color: #222;
-  color: #fff;
-}
-.biocard .links .view,
-.biocard .links .follow:hover {
-  background-color: transparent;
-  color: #222;
 }
