--- a/App/Templates/ui/input/style.css
+++ b/App/Templates/ui/input/style.css
@@ -8,6 +8,7 @@
   margin-bottom: 1rem;
   width: 100%;
   max-width: 600px;
+  position: relative;
 }
 .ui-input-label {
   display: inline-block;
@@ -68,4 +69,14 @@ input,
 select,
 textarea {
   font: inherit;
+}
+
+.ui-input-label-search {
+  position: absolute;
+  top: 0.6rem;
+  left: 0.5rem;
+  opacity: 0.7;
+}
+.ui-input-input-search {
+  padding-left: 2.2rem;
 }
