--- a/App/Templates/ui/tabs/style.css
+++ b/App/Templates/ui/tabs/style.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   overflow-x: auto;
-  border-bottom: 1px solid var(--color-primary-light2);
+  border-bottom: 1px solid var(--color-grey);
 }
 .horizontal-tabs a {
   font-size: 1rem;
