--- a/App/Templates/components/images/style.css
+++ b/App/Templates/components/images/style.css
@@ -174,6 +174,16 @@
   font-weight: 500;
   isolation: isolate;
   color: var(--color-white);
+  transition: 0.15s ease;
+  cursor: pointer;
+}
+.images-news-item:hover {
+  background: rgba(133, 133, 133, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 1rem;
 }
 .images-news-item-body {
   display: grid;
@@ -190,4 +200,11 @@
 }
 .images-news-item-body-description p {
   font-size: 0.8em;
+}
+
+.images_list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-top: 2rem;
 }
