add loader image

--- a/App/Templates/ui/icon/style.css
+++ b/App/Templates/ui/icon/style.css
@@ -8,6 +8,9 @@
   color: var(--color-active);
   position: relative;
 }
+.icon.hide {
+  display: none;
+}
 
 a.icon:hover {
   text-decoration: none;
