--- a/App/Templates/ui/input/style.css
+++ b/App/Templates/ui/input/style.css
@@ -18,7 +18,7 @@
   font-size: 0.7rem;
 }
 
-.ui-input-input,
+.ui-input,
 .ui-input-select,
 .ui-input-textarea {
   border: 2px solid var(--color-grey);
@@ -29,7 +29,7 @@
   background: var(--color-bg);
 }
 
-.ui-input-input {
+.ui-input {
   height: 50px;
   font-weight: 500;
   display: block;
@@ -51,8 +51,8 @@
   line-height: 1.4;
 }
 
-.ui-input-input.active,
-.ui-input-input:focus,
+.ui-input.active,
+.ui-input:focus,
 .ui-input-select.active,
 .ui-input-select:focus,
 .ui-input-textarea.active,
@@ -73,6 +73,67 @@ textarea {
   left: 0.5rem;
   opacity: 0.7;
 }
-.ui-input-input-search {
+.ui-input-search {
   padding-left: 2.2rem;
+}
+
+.ui-input-checkbox {
+  padding: 0;
+  height: initial;
+  width: initial;
+  margin-bottom: 0;
+  display: none;
+  cursor: pointer;
+}
+
+.ui-input-checkbox-label {
+  position: relative;
+  cursor: pointer;
+}
+
+.ui-input-checkbox-label:before {
+  content: "";
+  -webkit-appearance: none;
+  background-color: transparent;
+  border: 2px solid var(--color-primary);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+    inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 10px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.ui-input-checkbox:checked + .ui-input-checkbox-label:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: 10px;
+  width: 6px;
+  height: 14px;
+  border: solid var(--color-primary);
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.ui-input-file-wrapper {
+  width: 250px;
+  height: 4rem;
+  position: relative;
+  text-align: center;
+  font-weight: 700;
+  padding: 1rem;
+  color: var(--color-grey);
+  border: 2px dashed var(--color-grey);
+  transition: transform 0.3s;
+}
+.ui-input-file {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
 }
