--- a/App/Templates/ui/input/style.css
+++ b/App/Templates/ui/input/style.css
@@ -128,6 +128,7 @@ textarea {
   color: var(--color-grey);
   border: 2px dashed var(--color-grey);
   transition: transform 0.3s;
+  cursor: pointer;
 }
 .ui-input-file {
   position: absolute;
@@ -136,4 +137,5 @@ textarea {
   opacity: 0;
   top: 0;
   left: 0;
+  cursor: pointer;
 }
