--- a/public/mincss/ui/load_image/style.css
+++ b/public/mincss/ui/load_image/style.css
@@ -1,1 +1,1 @@
-.file_image_wrapper{padding-bottom:1rem}.file_image_preview_wrapper{position:relative}.file_image_preview_wrapper .icon{position:absolute;top:.5rem;left:.5rem;background:var(--color-bg);opacity:.7;border-radius:1rem;padding:4px 3px 0}
+.file_image_wrapper{padding-bottom:1rem}.file_image_preview_wrapper{position:relative}.file_image_preview_wrapper .icon{position:absolute;top:6px;left:6px;background:var(--color-bg);opacity:.7;border-radius:1rem;padding:4px 3px 0}
