--- a/public/mincss/components/profile_edit_avatar/style.css
+++ b/public/mincss/components/profile_edit_avatar/style.css
@@ -1,1 +1,1 @@
-.biocard-avatar{height:150px;width:150px;margin:2rem 0 1rem;cursor:pointer;border-radius:17px}.biocard-avatar:hover{box-shadow:0 0 0 .25rem var(--color-primary);outline:0}
+.biocard-avatar{height:auto;width:150px;margin:2rem 0 1rem;cursor:pointer;border-radius:17px}.biocard-avatar:hover{box-shadow:0 0 3px 3px var(--color-primary);outline:0}
